--- a/classes/bard/index.html
+++ b/classes/bard/index.html
@@ -114,144 +114,221 @@
 <p>當個詩人吧。來，帶著你的巧舌與機智。你說故事，你唱歌謠。一名尋常樂手只會複誦，而真正的吟遊詩人活在其中。繫上你的靴子吧，高貴的演說家。磨利那把小刀，接受呼喚。總得有人要與那些暴徒、惡棍與即將成為英雄的人們並肩作戰。又有誰比你更能傳誦自己的英雄故事？</p>
 <p>沒有別人了。來吧。</p></div>
 <hr/>
-<h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>精靈</em>: Astrafel, Daelwyn, Feliana, Damarra, Sistranalle, 潘卓爾(Pendrell), Melliandre, Dagoliir</p> 
-<p class="NoIndent"><em>人類</em>: Baldric, 莉娜(Leena), Dunwick, 威廉(Willem), Edwyn, Florian, Seraphine, Quorra, Charlotte, Lily, Ramonde, Cassandra</p></div>
+<h2>名稱</h2>
+<div id="names"><p class="NoIndent"><b>精靈</b>: 艾斯卓菲(Astrafel), 戴爾溫(Daelwyn), 費莉亞娜(Feliana), 德瑪拉(Damarra), 希斯卓娜(Sistranalle), 潘卓爾(Pendrell), 梅利安卓(Melliandre), 戴格里爾(Dagoliir)</p> 
+<p class="NoIndent"><b>人類</b>: 巴德里克(Baldric), 莉娜(Leena), 敦威克(Dunwick), 威廉(Willem), 埃德溫(Edwyn), 佛羅里安(Florian), 塞拉芬(Seraphine), 柯拉(Quorra), 夏洛特(Charlotte), 莉莉(Lily), 拉蒙德(Ramonde), 卡珊卓(Cassandra)</p></div>
 <hr/>
-<h2>外觀 (Look)</h2>
+<h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
-<ul><li>Knowing Eyes, Fiery Eyes, or Joyous Eyes</li>
-<li>Fancy Hair, Wild Hair, or Stylish Cap</li>
-<li>Finery, Traveling Clothes, or Poor Clothes</li>
-<li>Fit Body, Well-fed Body, or Thin Body</li></ul></div>
+<ul><li>世故的眼神, 熾熱的眼神, 或 歡快的眼神</li>
+<li>花俏的髮型, 狂野的髮型, 或 時尚的帽子</li>
+<li>華麗服飾, 旅行衣裝, 或 粗劣衣裝</li>
+<li>健美的體型, 肥胖的體型, 或 消瘦的體型</li></ul></div>
 <hr/>
-<h2>屬性數值 (Stats)</h2>
+<h2>屬性數值</h2>
 <p class="NoIndent">你的最大生命值為 6+體質值。</p>
 <p class="NoIndent">你的基礎傷害骰為 <span id="Damage">d6</span>。</p>
 <hr/>
-<h2>起始動作 (Starting Moves)</h2>
+<h2>起始動作</h2>
 <div id="startingmoves"><p class="InstructionsAfterHeader">選擇一個種族並獲得相應的動作：</p>
 <div id="racialmoves">
 <div class="Move"><h3 class="MoveName">精靈</h3>
-<p class="NoIndent">When you enter an important location (your call) you can ask the GM for one fact from the history of that location.</p></div>
+<p class="NoIndent">
+	當你來到一個重要的地點（由你決定是否重要）你可以詢問GM一個關於當地歷史的問題。</p></div>
 <div class="Move"><h3 class="MoveName">人類</h3>
-<p class="NoIndent">When you first enter a civilized settlement someone who respects the custom of hospitality to minstrels will take you in as their guest.</p></div></div>
+<p class="NoIndent">
+	當你首次進入一個文明社會的聚落時，某個遵守接待遊藝人傳統的人將會把你當作賓客款待。</p></div></div>
 <div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
-<div class="Move"><h3 class="BasicMoveName">Arcane Art</h3>
-<p class="NoIndent">When you <strong>weave a performance into a basic spell</strong>, choose an ally and an effect:</p>
-<ul><li>Heal 1d8 damage</li>
-<li>+1d4 forward to damage</li>
-<li>Their mind is shaken clear of one enchantment</li>
-<li>The next time someone successfully assists the target with aid, they get +2 instead of +1</li></ul>
-<p class="NoIndent">Then roll+Cha. ✴On a 10+, the ally gets the selected effect. ✴On a 7-9, your spell still works, but you draw unwanted attention or your magic reverberates to other targets affecting them as well, GM’s choice.</p></div>
-<div class="Move"><h3 class="BasicMoveName">Bardic Lore</h3>
-<p class="NoIndent">Choose an area of expertise:</p>
-<ul><li>Spells and Magicks</li>
-<li>The Dead and Undead</li>
-<li>Grand Histories of the Known World</li>
-<li>A Bestiary of Creatures Unusual</li>
-<li>The Planar Spheres</li>
-<li>Legends of Heroes Past</li>
-<li>Gods and Their Servants</li></ul>
-<p class="NoIndent">When you <strong>first encounter an important creature, location, or item (your call) covered by your bardic lore</strong> you can ask the GM any one question about it; the GM will answer truthfully. The GM may then ask you what tale, song, or legend you heard that information in.</p></div>
-<div class="Move"><h3 class="BasicMoveName">Charming and Open</h3>
-<p class="NoIndent">When you <strong>speak frankly with someone</strong>, you can ask their player a question from the list below. They must answer it truthfully, then they may ask you a question from the list (which you must answer truthfully).</p>
-<ul><li>Whom do you serve?</li>
-<li>What do you wish I would do?</li>
-<li>How can I get you to ______?</li>
-<li>What are you really feeling right now?</li>
-<li>What do you most desire?</li></ul></div>
-<div class="Move"><h3 class="BasicMoveName">A Port in the Storm</h3>
-<p class="NoIndent">When you <strong>return to a civilized settlement you’ve visited before</strong>, tell the GM when you were last here. They’ll tell you how it’s changed since then.</p></div></div></div>
+
+<div class="Move"><h3 class="BasicMoveName">秘奧藝術 (Arcane Art)</h3>
+<p class="NoIndent">
+	當你<strong>透過表演編織出基礎術法</strong>時，選擇一名同伴和一個效果：</p>
+<ul>
+	<li>治療 1d8 傷害</li>
+	<li>下次傷害 +1d4</li>
+	<li>他從一項惑控心智的效果中掙脫清醒</li>
+	<li>下一次當有人成功透過援助動作協助目標時，目標將獲得 +2 而非原本的 +1 加值</li></ul>
+<p class="NoIndent">
+	然後擲+魅力：<br/>
+	✴擲出10+時，該同伴獲得你選擇的效果。<br/>
+	✴擲出7-9時，你的法術仍然發揮效果，但你引來了不必要的注意、或者你的魔法擴散並影響到了其他目標，由GM決定。</p></div>
+
+<div class="Move"><h3 class="BasicMoveName">詩人逸聞 (Bardic Lore)</h3>
+<p class="NoIndent">
+	選擇一項專業領域：</p>
+<ul>
+	<li>法術和魔法</li>
+	<li>死者和不死生物</li>
+	<li>已知世界的宏大歷史</li>
+	<li>奇特生物的習性</li>
+	<li>異位面領域</li>
+	<li>過往英雄的傳奇</li>
+	<li>諸神與他們的僕從</li></ul>
+<p class="NoIndent">
+	當你<strong>首次遭遇與你所選詩人逸聞有關的重要生物、場所、或物品（由你決定）</strong>時，你可以詢問GM一個與之相關的問題；GM會據實以告。GM接著可能會詢問你是從什麼故事、歌謠、或傳說中聽過這些情報的。</p></div>
+
+<div class="Move"><h3 class="BasicMoveName">敞開心胸 (Charming and Open)</h3>
+<p class="NoIndent">
+	當你<strong>真誠坦率地與某人交談</strong>時，你可以對他們的玩家詢問下列其中一個問題。他們必須據實以告，然後，他們也可以回問你下列其中一個問題（你也必須據實回答）。</p>
+<ul>
+	<li>你為誰效力？</li>
+	<li>你希望我做什麼？</li>
+	<li>我要怎樣才能讓你去________？</li>
+	<li>你現在真正的感受是什麼？</li>
+	<li>你最渴望的是什麼？</li></ul></div>
+
+<div class="Move"><h3 class="BasicMoveName">避風港 (A Port in the Storm)</h3>
+<p class="NoIndent">
+	當你<strong>回到一個你曾經造訪過的文明聚落</strong>時，告訴GM你上次來到這裡是什麼時候。GM會告訴你這裡自那時以來有什麼改變。</p></div></div></div>
 <hr/>
-<h2>陣營 (Alignment)</h2>
+
+<h2>陣營</h2>
 <p class="InstructionsAfterHeader">選擇一個陣營：</p>
-<div id="alignment"><div class="Move"><h3 class="MoveName">善良</h3>
-<p class="NoIndent">Perform your art to aid someone else.</p></div>
+<div id="alignment">
+<div class="Move"><h3 class="MoveName">善良</h3>
+<p class="NoIndent">為了幫助他人而表演。</p></div>
 <div class="Move"><h3 class="MoveName">中立</h3>
-<p class="NoIndent">Avoid a conflict or defuse a tense situation.</p></div>
+<p class="NoIndent">避免衝突或化解劍拔弩張的場面。</p></div>
 <div class="Move"><h3 class="MoveName">混亂</h3>
-<p class="NoIndent">Spur others to significant and unplanned decisive action.</p></div></div>
+<p class="NoIndent">煽動他人在沒有計畫的情況下做出重大行動。</p></div></div>
 <hr/>
-<h2>裝備 (Gear)</h2>
-<div id="gear"><p class="NoIndent">Your load is 9+Str. You have dungeon rations (5 uses, 1 weight). Choose one instrument, all are 0 weight for you:</p>
-<ul><li class="Option">Your father’s mandolin, repaired</li>
-<li class="Option">A fine lute, a gift from a noble</li>
-<li class="Option">The pipes with which you courted your first love</li>
-<li class="Option">A stolen horn</li>
-<li class="Option">A fiddle, never before played</li>
-<li class="Option">A songbook in a forgotten tongue</li></ul>
-<p class="NoIndent">Choose your clothing:</p>
-<ul><li class="Option">Leather armor (1 armor, 1 weight)</li>
-<li class="Option">Ostentatious clothes (0 weight)</li></ul>
-<p class="NoIndent">Choose your armament:</p>
-<ul><li class="Option">Dueling rapier (close, precise, 2 weight)</li>
-<li class="Option">Worn bow (near, 2 weight), bundle of arrows (3 ammo, 1 weight), and short sword (close, 1 weight)</li></ul>
-<p class="NoIndent">Choose one:</p>
-<ul><li>Adventuring gear (1 weight)</li>
-<li>Bandages (0 weight)</li>
-<li>Halfling pipeleaf (0 weight)</li>
-<li>3 coins</li></ul></div>
+
+<h2>裝備</h2>
+<div id="gear"><p class="NoIndent">
+	你的負載上限為 9+力量。<br/>
+	你起始擁有 地城口糧 (<tag>5 使用次數</tag> <tag>1 重量</tag>)。選擇一項樂器，這些樂器對你來說都被視為 <tag>0 重量</tag>：</p>
+<ul>
+	<li class="Option">你父親的曼陀林，已被修復完好</li>
+	<li class="Option">一名貴族所贈送的精美魯特琴</li>
+	<li class="Option">你用來追求初戀情人的吹笛</li>
+	<li class="Option">偷來的號角</li>
+	<li class="Option">一把從未被演奏過的小提琴</li>
+	<li class="Option">一本失傳的歌集</li></ul>
+
+<p class="NoIndent">選擇你的衣著：</p>
+<ul>
+	<li class="Option">皮甲 (<span class="Tags">1 護甲, 1 重量</span>)</li>
+	<li class="Option">浮誇華美的衣服 (<span class="Tags">0 重量</span>)</li></ul>
+
+<p class="NoIndent">選擇你的武器：</p>
+<ul>
+	<li class="Option">決鬥刺劍 (<span class="Tags">近身, 靈巧, 2 重量</span>)</li>
+	<li class="Option">劣質弓 (<span class="Tags">短程, 2 重量</span>), 一綑箭矢 (<span class="Tags">3 彈藥, 1 重量</span>), 和 短劍 (<span class="Tags">近身, 1 重量</span>)</li></ul>
+
+<p class="NoIndent">選擇一項：</p>
+<ul>
+	<li>探險工具組 (<span class="Tags">5 使用次數, 1 重量</span>)</li>
+	<li>繃帶 (<span class="Tags">3 使用次數, 緩慢, 0 重量</span>)</li>
+	<li>半身人菸草 (<span class="Tags">6 使用次數, 0 重量</span>)</li>
+	<li>3 金幣</li></ul></div>
 <hr/>
-<h2>羈絆 (Bonds)</h2>
-<div id="bonds"><p class="NoIndent">Fill in the name of one of your companions in at least one:</p>
-<p>This is not my first adventure with _______________.</p>
-<p>I sang stories of _______________ long before I ever met them in person.</p>
-<p>_______________ is often the butt of my jokes.</p>
-<p>I am writing a ballad about the adventures of _______________.</p>
-<p>_______________ trusted me with a secret.</p>
-<p>_______________ does not trust me, and for good reason.</p></div>
+
+<h2>羈絆</h2>
+<div id="bonds"><p class="NoIndent">在至少一個欄位中填入你其中一名同伴的名字：</p>
+<p>這不是我第一次與 _______________ 一起冒險了。</p>
+<p>在見過 _______________ 本人以前，我就已經傳唱過許多關於他的故事。</p>
+<p>_______________ 經常是我開玩笑的對象。</p>
+<p>我正在撰寫一首關於 _______________ 冒險的歌謠。</p>
+<p>_______________ 將一個祕密託付給我。</p>
+<p>_______________ 不信任我，且他有著充分的理由。</p></div>
 <hr/>
-<h2>進階動作 (Advanced Moves)</h2>
+
+<h2>進階動作</h2>
 <div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇：</p>
-<div class="Move"><h3 class="MoveName">Healing Song</h3>
-<p class="NoIndent">When you <strong>heal with arcane art</strong>, you heal +1d8 damage.</p></div>
-<div class="Move"><h3 class="MoveName">Vicious Cacophony</h3>
-<p class="NoIndent">When you <strong>grant bonus damage with arcane art</strong>, you grant an extra +1d4 damage.</p></div>
-<div class="Move"><h3 class="MoveName">It Goes To Eleven</h3>
-<p class="NoIndent">When you <strong>unleash a crazed performance</strong> (a righteous lute solo or mighty brass blast, maybe) choose a target who can hear you and roll+Cha. ✴On a 10+ the target attacks their nearest ally in range. ✴On a 7–9 they attack their nearest ally, but you also draw their attention and ire.</p></div>
-<div class="Move"><h3 class="MoveName">Metal Hurlant</h3>
-<p class="NoIndent">When you <strong>shout with great force or play a shattering note</strong> choose a target and roll+Con. ✴On a 10+ the target takes 1d10 damage and is deafened for a few minutes. ✴On a 7–9 you still damage your target, but it’s out of control: the GM will choose an additional target nearby.</p></div>
-<div class="Move"><h3 class="MoveName">A Little Help From My Friends</h3>
-<p class="NoIndent">When you <strong>successfully aid someone</strong> you take +1 forward as well.</p></div>
-<div class="Move"><h3 class="MoveName">Eldritch Tones</h3>
-<p class="NoIndent">Your arcane art is strong, allowing you to choose two effects instead of one.</p></div>
-<div class="Move"><h3 class="MoveName">Duelist’s Parry</h3>
-<p class="NoIndent">When you hack and slash, you take +1 armor forward.</p></div>
-<div class="Move"><h3 class="MoveName">Bamboozle</h3>
-<p class="NoIndent">When you <strong>parley with someone</strong>, on a 7+ you also take +1 forward with them.</p></div>
-<div class="Move"><h3 class="MoveName">Multiclass Dabbler</h3>
-<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div>
-<div class="Move"><h3 class="MoveName">Multiclass Initiate</h3>
-<p class="Requirement">Requires: Multiclass Dabbler</p>
-<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div>
+<div class="Move"><h3 class="MoveName">治癒之歌 (Healing Song)</h3>
+<p class="NoIndent">
+	當你<strong>使用秘奧藝術來治療</strong>時，你再額外治療 +1d8 傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">惡毒噪音 (Vicious Cacophony)</h3>
+<p class="NoIndent">
+	當你<strong>使用秘奧藝術來提供額外傷害</strong>時，你再提供額外的 +1d4 傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">超越極限 (It Goes To Eleven)</h3>
+<p class="NoIndent">
+	當你<strong>釋放出一段令人瘋狂的表演</strong>時（比如說一段驚豔的魯特琴獨奏、或是充滿力量銅管音爆），選擇一個能聽見你聲音的目標，並擲+魅力：<br/>
+	✴擲出10+時，目標會攻擊距離他們範圍內最近的同伴。
+	✴擲出7-9時，他們仍然會攻擊距離他們最近的同伴，但你也同時引起他們的注意和憤怒。</p></div>
+
+<div class="Move"><h3 class="MoveName">金屬咆哮 (Metal Hurlant)</h3>
+<p class="NoIndent">
+	當你<strong>充滿力量地大喊或彈奏一段驚天動地的音符</strong>，選擇一個目標並擲+體質：<br/>
+	✴擲出10+時，目標受到 1d10 傷害，且耳聾長達數分鐘。<br/>
+	✴擲出7-9時，你仍然對目標造成傷害，但聲波將失去控制：GM會額外選擇一個附近的目標受到影響。</p></div>
+
+<div class="Move"><h3 class="MoveName">來自吾友的一點幫助 (A Little Help From My Friends)</h3>
+<p class="NoIndent">
+	當你<strong>成功地援助某人</strong>，你也同樣獲得下次+1。</p></div>
+
+<div class="Move"><h3 class="MoveName">可怖音調 (Eldritch Tones)</h3>
+<p class="NoIndent">
+	你的秘奧藝術是如此強大，讓你得以選擇兩個效果，而非原本的一個。</p></div>
+
+<div class="Move"><h3 class="MoveName">決鬥者招架 (Duelist’s Parry)</h3>
+<p class="NoIndent">
+	當你進行砍劈動作時，你獲得下次護甲值+1。</p></div>
+
+<div class="Move"><h3 class="MoveName">哄騙 (Bamboozle)</h3>
+<p class="NoIndent">
+	當你<strong>與某人談判</strong>時擲出7+的結果，你同時獲得對他們的下次+1。</p></div>
+
+<div class="Move"><h3 class="MoveName">兼職新手 (Multiclass Dabbler)</h3>
+<p class="NoIndent">
+	從另一個職業中獲得一個動作。 在選擇動作時，將你的等級視為比原本低一級。</p></div>
+
+<div class="Move"><h3 class="MoveName">兼職學徒 (Multiclass Initiate)</h3>
+<p class="Requirement">需求: 兼職新手</p>
+<p class="NoIndent">
+	從另一個職業中獲得一個動作。 在選擇動作時，將你的等級視為比原本低一級。</p></div>
+
+
 <p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
-<div class="Move"><h3 class="MoveName">Healing Chorus</h3>
-<p class="Requirement">Replaces: Healing Song</p>
-<p class="NoIndent">When you <strong>heal with arcane art</strong>, you heal +2d8 damage.</p></div>
-<div class="Move"><h3 class="MoveName">Vicious Blast</h3>
-<p class="Requirement">Replaces: Vicious Cacophony</p>
-<p class="NoIndent">When you <strong>grant bonus damage with arcane art</strong>, you grant an extra +2d4 damage.</p></div>
-<div class="Move"><h3 class="MoveName">Unforgettable Face</h3>
-<p class="NoIndent">When you <strong>meet someone you’ve met before</strong> (your call) after some time apart you take +1 forward against them.</p></div>
-<div class="Move"><h3 class="MoveName">Reputation</h3>
-<p class="NoIndent">When you <strong>first meet someone who’s heard songs about you</strong>, roll+Cha. ✴On a 10+, tell the GM two things they’ve heard about you. ✴On a 7-9, tell the GM one thing they’ve heard, and the GM tells you one thing.</p></div>
-<div class="Move"><h3 class="MoveName">Eldritch Chord</h3>
-<p class="Requirement">Replaces: Eldritch Tones</p>
-<p class="NoIndent">When you use arcane art, you choose two effects. You also get to choose one of those effects to double.</p></div>
-<div class="Move"><h3 class="MoveName">An Ear For Magic</h3>
-<p class="NoIndent">When you <strong>hear an enemy cast a spell</strong> the GM will tell you the name of the spell and its effects. Take +1 forward when acting on the answers.</p></div>
-<div class="Move"><h3 class="MoveName">Devious</h3>
-<p class="NoIndent">When you use charming and open you may also ask “How are you vulnerable to me?” Your subject may not ask this question of you.</p></div>
-<div class="Move"><h3 class="MoveName">Duelist’s Block</h3>
-<p class="Requirement">Replaces: Duelist’s Parry</p>
-<p class="NoIndent">When you hack and slash, you take +2 armor forward.</p></div>
-<div class="Move"><h3 class="MoveName">Con</h3>
-<p class="Requirement">Replaces: Bamboozle</p>
-<p class="NoIndent">When you <strong>parley with someone</strong>, on a 7+ you also take +1 forward with them and get to ask their player one question which they must answer truthfully.</p></div>
-<div class="Move"><h3 class="MoveName">Multiclass Master</h3>
-<p class="Requirement">Requires: Multiclass Initiate</p>
-<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div></div>
+
+<div class="Move"><h3 class="MoveName">治癒合唱 (Healing Chorus)</h3>
+<p class="Requirement">取代: 治癒之歌</p>
+<p class="NoIndent">
+	當你<strong>使用秘奧藝術來治療</strong>時，你再額外治療 +2d8 傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">惡意音爆 (Vicious Blast)</h3>
+<p class="Requirement">取代: 惡毒噪音</p>
+<p class="NoIndent">
+	當你<strong>使用秘奧藝術來提供額外傷害</strong>時，你再提供額外的 +2d4 傷害。</p></div>
+
+<div class="Move"><h3 class="MoveName">難忘面容 (Unforgettable Face)</h3>
+<p class="NoIndent">
+	當你<strong>遇見了某個你曾經在好一段時間之前遇過的人</strong>（由你決定），你獲得對他們的下次+1。</p></div>
+
+<div class="Move"><h3 class="MoveName">聲譽 (Reputation)</h3>
+<p class="NoIndent">
+	當你<strong>初次和某個曾聽過你歌曲的人見面</strong>時，擲+魅力。<br/>
+	✴擲出10+時，告訴GM二件他曾聽說過關於你的事情。<br/>
+	✴擲出7-9時，告訴GM一件他曾聽說過關於你的事情，且GM告訴你一件。</p></div>
+
+<div class="Move"><h3 class="MoveName">可怖和弦 (Eldritch Chord)</h3>
+<p class="Requirement">取代: 可怖音調</p>
+<p class="NoIndent">
+	當你使用秘奧藝術時，你可以選擇兩個效果。你同時還能選擇將其中一個效果變為兩倍。</p></div>
+
+<div class="Move"><h3 class="MoveName">魔法知音 (An Ear For Magic)</h3>
+<p class="NoIndent">
+	當你<strong>聽見一個敵人在施放法術</strong>時，GM會告訴你該法術的名稱以及效果。當依據答案而採取行動時，獲得下次+1。</p></div>
+
+<div class="Move"><h3 class="MoveName">精心算計 (Devious)</h3>
+<p class="NoIndent">
+	當你使用敞開心胸時，你也可以詢問「你對我有什麼弱點？」，且對方不能拿這個問題回來詢問你。</p></div>
+
+<div class="Move"><h3 class="MoveName">決鬥者格擋 (Duelist’s Block)</h3>
+<p class="Requirement">取代: 決鬥者招架</p>
+<p class="NoIndent">
+	當你進行砍劈動作時，你獲得下次護甲值+2。</p></div>
+
+<div class="Move"><h3 class="MoveName">欺詐 (Con)</h3>
+<p class="Requirement">取代: 哄騙</p>
+<p class="NoIndent">
+	當你<strong>與某人談判</strong>時擲出7+的結果，你同時獲得對他們的下次+1。你還可以向他們的玩家詢問一個問題，且對方必須據實回答。</p></div>
+
+<div class="Move"><h3 class="MoveName">兼職大師 (Multiclass Master)</h3>
+<p class="Requirement">需求: 兼職學徒</p>
+<p class="NoIndent">從另一個職業中獲得一個動作。 在選擇動作時，將你的等級視為比原本低一級。</p></div></div>
 
           </div>
        </div>
@@ -300,7 +377,7 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(" "+tags_arr.map(function(tag){
+        current.html(""+tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
             if(isRangeTag(tag))         className = "red";
@@ -309,6 +386,18 @@
             if(isSpellLevelTag(tag))    className = "purple";
             return `<tag class="${className}">${tag}</tag>`;
           }).join(" "));
+      });
+      $("#names p").each(function(i) {
+        var names_match = $(this).html().match(/(.+\: )(.+)/);
+        if( names_match == null || names_match.length<3 ) return ;
+        
+        var names_head = names_match[1];
+        var names_arr = names_match[2].split(", ").map(context => {
+          const name_match = context.match(/(.+)\((\w+)\)/);
+          return name_match? `<n title="${name_match[2]}">${name_match[1]}</n>`: context;
+        });
+
+        $(this).html(names_head + names_arr.join(", "));
       });
 
       function isSpellLevelTag(tag){
