--- a/classes/cleric/index.html
+++ b/classes/cleric/index.html
@@ -111,33 +111,40 @@
           <div class="col-md-8 col-md-offset-1">
              
 <h1>牧師</h1>
-<div id="intro"><p class="NoIndent">地城世界的大地就是個被神遺棄的爛攤子。在安全與被祝福的文明之間，佈滿了走動的死屍、各種的野獸、跟廣袤的超自然之地。那是個神不存在的世界，而這也正是為何需要你的原因。</p>
+<div id="intro"><p class="NoIndent">地城世界的大地就是個被神遺棄的爛攤子。在安全與被祝福的文明之間，佈滿了走動的死屍、各類野獸、以及廣袤的超自然之地。那是個神不存在的世界，而這也正是為何需要你的原因。</p>
 <p>將神之榮光帶給異教徒不只是你的本性──更是你的使命。你持著劍、槌和咒法宣教，劈開粗野的愚蠢之心，植入神聖之籽。有人說，最好讓神常伴你心。你知道那都是狗屁。神只住在刀鋒之上。</p>
 <p>向這個世界證明，誰才是它的主宰。</p></div>
 <hr/>
-<h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>Dwarf</em>: 杜嘉(Durga), Aelfar, Gerda, Rurgosh, Bjorn, Drummond, Helga, Siggrun, Freya</p>
-<p class="NoIndent"><em>Human</em>: 衛斯理(Wesley), Brinton, Jon, Sara, Hawthorn, Elise, Clarke, Lenore, Piotr, Dahlia, Carmine</p></div>
+
+<h2>名稱</h2>
+<div id="names"><p class="NoIndent"><b>矮人</b>: 杜嘉(Durga), 艾歐法(Aelfar), 戈達(Gerda), 洛葛許(Rurgosh), 比尤恩(Bjorn), 德拉蒙德(Drummond), 海爾格(Helga), 西格倫(Siggrun), 芙雷雅(Freya)</p>
+<p class="NoIndent"><b>人類</b>: 衛斯理(Wesley), 布林頓(Brinton), 喬恩(Jon), 莎拉(Sara), 霍索恩(Hawthorn), 伊莉絲(Elise), 克拉克(Clarke), 萊諾蕾(Lenore), 彼得(Piotr), 達莉婭(Dahlia), 卡邁恩(Carmine)</p></div>
 <hr/>
-<h2>外觀 (Look)</h2>
+
+<h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
-<ul><li>Kind Eyes, Sharp Eyes, or Sad Eyes</li>
-<li>Tonsure, Strange Hair, or Bald</li>
-<li>Flowing Robes, Habit, or Common Garb</li>
-<li>Thin Body, Knobby Body, or Flabby Body</li></ul></div>
+<ul><li>和藹的眼神, 銳利的眼神, 或 憂愁的眼神</li>
+<li>修士削髮, 怪異的髮型, 或 光頭</li>
+<li>飄逸長袍, 神職服裝, 或 尋常裝束</li>
+<li>消瘦的體型, 圓潤的體型, 或 鬆弛的體型</li></ul></div>
 <hr/>
-<h2>屬性數值 (Stats)</h2>
-<p class="NoIndent">Your maximum HP is 8+Constitution.</p>
-<p class="NoIndent">Your base damage is <span id="Damage">d6</span>.</p>
+
+<h2>屬性數值</h2>
+<p class="NoIndent">你的最大生命值為 8+體質值。</p>
+<p class="NoIndent">你的基礎傷害骰為 <span id="Damage">d6</span>。</p>
 <hr/>
-<h2>起始動作 (Starting Moves)</h2>
+
+<h2>起始動作</h2>
 <div id="startingmoves"><p class="InstructionsAfterHeader">選擇一個種族並獲得相應的動作：</p>
-<div id="racialmoves"><div class="Move"><h3 class="MoveName">Dwarf</h3>
-<p class="NoIndent">You are one with stone. When you commune you are also granted a special version of Words of the Unspeaking as a rote which only works on stone.</p></div>
-<div class="Move"><h3 class="MoveName">Human</h3>
-<p class="NoIndent">Your faith is diverse. Choose one wizard spell. You can cast and be granted that spell as if it was a cleric spell.</p></div></div>
+<div id="racialmoves"><div class="Move"><h3 class="MoveName">矮人</h3>
+<p class="NoIndent">
+	你與岩石有如一體。當你進行<b>通神</b>動作時，你也同時將被授予一個特殊版本的<u>無聲者之語</u>法術（5級牧師法術），這個法術將被視作禱念，且只對石頭有效。</p></div>
+<div class="Move"><h3 class="MoveName">人類</h3>
+<p class="NoIndent">
+	你的信仰多元。選擇一個法師法術。你可以把它視作牧師法術一樣被授予並施放。</p></div></div>
+
 <div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
-<div id="Deity"><div class="Move"><h3 class="BasicMoveName">Deity</h3>
+<div id="Deity"><div class="Move"><h3 class="BasicMoveName">神祇 (Deity)</h3>
 <p class="NoIndent">You serve and worship some deity or power which grants you spells. Give your god a name (maybe Helferth, Sucellus, Zorica or Krugon the Bleak) and choose your deity’s domain:</p>
 <ul><li class="Option">Healing and Restoration</li>
 <li class="Option">Bloody Conquest</li>
@@ -150,53 +157,65 @@
 <li class="Option">Your religion is cultish and insular, add Petition: Gaining Secrets</li>
 <li class="Option">Your religion has important sacrificial rites, add Petition: Offering</li>
 <li class="Option">Your religion believes in trial by combat, add Petition: Personal Victory</li></ul></div></div>
-<div class="Move"><div id="DivineGuidance"><h3 class="BasicMoveName">Divine Guidance</h3>
+
+<div class="Move"><div id="DivineGuidance"><h3 class="BasicMoveName">神聖啟示 (Divine Guidance)</h3>
 <p class="NoIndent">When you <strong>petition your deity according to the precept of your religion</strong>, you are granted some useful knowledge or boon related to your deity’s domain. The GM will tell you what.</p></div></div>
-<div class="Move"><div id="TurnUndead"><h3 class="BasicMoveName">Turn Undead</h3>
+
+<div class="Move"><div id="TurnUndead"><h3 class="BasicMoveName">驅散死靈 (Turn Undead)</h3>
 <p class="NoIndent">When you <strong>hold your holy symbol aloft and call on your deity for protection</strong>, roll+Wis. ✴On a 7+, so long as you continue to pray and brandish your holy symbol, no undead may come within reach of you. ✴On a 10+, you also momentarily daze intelligent undead and cause mindless undead to flee. Aggression breaks the effects and they are able to act as normal. Intelligent undead may still find ways to harry you from afar. They’re clever like that.</p></div></div>
 <div class="Move"><div id="Commune"><h3 class="BasicMoveName">通神 (Commune)</h3>
 <p class="NoIndent">When you <strong>spend uninterrupted time (an hour or so) in quiet communion with your deity</strong>, you:</p>
 <ul><li>Lose any spells already granted to you.</li>
 <li>Are granted new spells of your choice whose total levels don’t exceed your own level+1, and none of which is a higher level than your own level.</li>
 <li>Prepare all of your rotes, which never count against your limit.</li></ul></div></div>
-<div class="Move"><div id="CastASpell"><h3 class="BasicMoveName">Cast a Spell</h3>
+<div class="Move"><div id="CastASpell"><h3 class="BasicMoveName">施放法術 (Cast a Spell)</h3>
 <p class="NoIndent">When you <strong>unleash a spell granted to you by your deity</strong>, roll+Wis. ✴On a 10+, the spell is successfully cast and your deity does not revoke the spell, so you may cast it again. ✴On a 7–9, the spell is cast, but choose one:</p>
 <ul><li>You draw unwelcome attention or put yourself in a spot. The GM will tell you how.</li>
 <li>Your casting distances you from your deity—take -1 ongoing to cast a spell until the next time you commune.</li>
 <li>After you cast it, the spell is revoked by your deity. You cannot cast the spell again until you commune and have it granted to you.</li></ul>
 <p class="NoIndent">Note that maintaining spells with ongoing effects will sometimes cause a penalty to your roll to cast a spell.</p></div></div></div></div>
 <hr/>
-<h2>陣營 (Alignment)</h2>
+
+<h2>陣營</h2>
 <p class="InstructionsAfterHeader">選擇一個陣營：</p>
-<div id="alignment"><div class="Move"><h3 class="MoveName">Good</h3>
+<div id="alignment"><div class="Move"><h3 class="MoveName">善良</h3>
 <p class="NoIndent">Endanger yourself to heal another.</p></div>
-<div class="Move"><h3 class="MoveName">Lawful</h3>
+<div class="Move"><h3 class="MoveName">守序</h3>
 <p class="NoIndent">Endanger yourself following the precepts of your church or god.</p></div>
-<div class="Move"><h3 class="MoveName">Evil</h3>
+<div class="Move"><h3 class="MoveName">邪惡</h3>
 <p class="NoIndent">Harm another to prove the superiority of your church or god.</p></div></div>
 <hr/>
-<h2>裝備 (Gear)</h2>
-<div id="gear"><p class="NoIndent">Your load is 10+Str. You carry dungeon rations (5 uses, 1 weight) and some symbol of the divine, describe it (0 weight). Choose your defenses:</p>
-<ul><li class="Option">Chainmail (1 armor, 1 weight)</li>
-<li class="Option">Shield (+1 armor, 2 weight)</li></ul>
-<p class="NoIndent">Choose your armament:</p>
-<ul><li class="Option">Warhammer (close, 1 weight)</li>
-<li class="Option">Mace (close, 1 weight)</li>
-<li class="Option">Staff (close, two-handed, 1 weight) and bandages (0 weight)</li></ul>
-<p class="NoIndent">Choose one:</p>
-<ul><li class="Option">Adventuring gear (1 weight) and dungeon rations (5 uses, 1 weight)</li>
-<li class="Option">Healing potion (0 weight)</li></ul></div>
+
+<h2>裝備</h2>
+<div id="gear"><p class="NoIndent">
+	你的負載上限為 10+力量。<br/>
+	你起始擁有 地城口糧 (<tag>5 使用次數</tag> <tag>1 重量</tag>) 和一些聖徽，樣式由你描述 (<tag>0 重量</tag>)。</p>
+<p class="NoIndent">選擇你的防具：</p>
+<ul>
+	<li class="Option">鏈甲 (<span class="Tags">1 護甲, 1 重量</span>)</li>
+	<li class="Option">盾牌 (<span class="Tags">+1 護甲, 2 重量</span>)</li></ul>
+<p class="NoIndent">選擇你的武器：</p>
+<ul>
+	<li class="Option">戰鎚 (<span class="Tags">近身, 1 重量</span>)</li>
+	<li class="Option">釘頭鎚 (<span class="Tags">近身, 1 重量</span>)</li>
+	<li class="Option">長杖 (<span class="Tags">近身, 雙手, 1 重量</span>) 和 繃帶 (<span class="Tags">3 使用次數, 緩慢, 0 重量</span>)</li></ul>
+<p class="NoIndent">選擇一項：</p>
+<ul>
+	<li class="Option">探險工具組 (<span class="Tags">5 使用次數, 1 重量</span>) 和 地城口糧 (<span class="Tags">5 使用次數, 1 重量</span>)</li>
+	<li class="Option">治療藥水 (<span class="Tags">0 重量</span>)</li></ul></div>
 <hr/>
-<h2>羈絆 (Bonds)</h2>
-<div id="bonds"><p class="NoIndent">Fill in the name of one of your companions in at least one:</p>
-<p>_______________ has insulted my deity; I do not trust them.</p>
-<p>_______________ is a good and faithful person; I trust them implicitly.</p>
-<p>_______________ is in constant danger, I will keep them safe.</p>
-<p>I am working on converting _______________ to my faith.</p></div>
+
+<h2>羈絆</h2>
+<div id="bonds"><p class="NoIndent">在至少一個欄位中填入你其中一名同伴的名字：</p>
+<p>_______________ 曾經侮辱我的神；我不信任他們。</p>
+<p>_______________ 是個善良而虔誠的人，我對他們抱持絕對的信任。</p>
+<p>_______________ 時常處在危險之中，我會保護他們的安全。</p>
+<p>我正在努力讓 _______________ 皈依我的信仰。</p></div>
 <hr/>
-<h2>進階動作 (Advanced Moves)</h2>
+
+<h2>進階動作</h2>
 <div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇：</p>
-<div class="Move"><h3 class="MoveName">Chosen One</h3>
+<div class="Move"><h3 class="MoveName">天選者 (Chosen One)</h3>
 <p class="NoIndent">Choose one spell. You are granted that spell as if it was one level lower.</p></div>
 <div class="Move"><h3 class="MoveName">Invigorate</h3>
 <p class="NoIndent">When you <strong>heal someone</strong> they take +2 forward to their damage.</p></div>
@@ -221,7 +240,7 @@
 <div class="Move"><h3 class="MoveName">Devoted Healer</h3>
 <p class="NoIndent">When you heal someone else of damage, add your level to the amount of damage healed.</p></div>
 <p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
-<div class="Move"><h3 class="MoveName">Anointed</h3>
+<div class="Move"><h3 class="MoveName">受膏者 (Anointed)</h3>
 <p class="Requirement">Requires: Chosen One</p>
 <p class="NoIndent">Choose one spell in addition to the one you picked for chosen one. You are granted that spell as if it was one level lower.</p></div>
 <div class="Move"><h3 class="MoveName">Apotheosis</h3>
@@ -248,8 +267,10 @@
 <p class="NoIndent">When you cast a spell, on a 10–11 you have the option of choosing from the 7–9 list. If you do, you may choose one of these effects as well. On a 12+ you get to choose one of these effects for free.</p>
 <ul><li>The spell’s effects are doubled</li>
 <li>The spell’s targets are doubled</li></ul></div>
-<div class="Move"><h3 class="MoveName">Multiclass Dabbler</h3>
-<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div></div>
+
+<div class="Move"><h3 class="MoveName">兼職新手 (Multiclass Dabbler)</h3>
+<p class="NoIndent">
+	從另一個職業中獲得一個動作。 在選擇動作時，將你的等級視為比原本低一級。</p></div></div>
 
           </div>
        </div>
@@ -298,7 +319,7 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(" "+tags_arr.map(function(tag){
+        current.html(""+tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
             if(isRangeTag(tag))         className = "red";
@@ -307,6 +328,18 @@
             if(isSpellLevelTag(tag))    className = "purple";
             return `<tag class="${className}">${tag}</tag>`;
           }).join(" "));
+      });
+      $("#names p").each(function(i) {
+        var names_match = $(this).html().match(/(.+\: )(.+)/);
+        if( names_match == null || names_match.length<3 ) return ;
+        
+        var names_head = names_match[1];
+        var names_arr = names_match[2].split(", ").map(context => {
+          const name_match = context.match(/(.+)\((\w+)\)/);
+          return name_match? `<n title="${name_match[2]}">${name_match[1]}</n>`: context;
+        });
+
+        $(this).html(names_head + names_arr.join(", "));
       });
 
       function isSpellLevelTag(tag){
