--- a/classes/wizard/spells/index.html
+++ b/classes/wizard/spells/index.html
@@ -126,7 +126,7 @@
 <p class="NoIndent">One of your senses is briefly attuned to magic. The GM will tell you what here is magical.</p></div>
 <div class="Spell"><h3 class="SpellName">心靈感應 (Telepathy)<span class="Tags">	Level 1	, 預言系, Ongoing</span></h3>
 <p class="NoIndent">You form a telepathic bond with a single person you touch, enabling you to converse with that person through your thoughts. You can only have one telepathic bond at a time.</p></div>
-<div class="Spell"><h3 class="SpellName">魅惑人類 (Charm Person)<span class="Tags">	Level 1	, 附魔系, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">魅惑人類 (Charm Person)<span class="Tags">	Level 1	, 惑控系, Ongoing</span></h3>
 <p class="NoIndent">The person (not beast or monster) you touch while casting this spell counts you as a friend until they take damage or you prove otherwise.</p></div>
 <div class="Spell"><h3 class="SpellName">隱形術 (Invisibility)<span class="Tags">	Level 1	, 幻術系, Ongoing</span></h3>
 <p class="NoIndent">Touch an ally: nobody can see them. They’re invisible! The spell persists until the target attacks or you dismiss the effect. While the spell is ongoing you can’t cast a spell.</p></div>
@@ -146,7 +146,7 @@
 <p class="NoIndent">You take the form of someone you touch while casting this spell. Your physical characteristics match theirs exactly but your behavior may not. This change persists until you take damage or choose to return to your own form. While this spell is ongoing you lose access to all your wizard moves.</p></div>
 <div class="Spell"><h3 class="SpellName">鏡影術 (Mirror Image)<span class="Tags">	Level 3	, 幻術系</span></h3>
 <p class="NoIndent">You create an illusory image of yourself. When you are attacked, roll a d6. On a 4, 5, or 6 the attack hits the illusion instead, the image then dissipates and the spell ends.</p></div>
-<div class="Spell"><h3 class="SpellName">睡眠術 (Sleep)<span class="Tags">	Level 3	, 附魔系</span></h3>
+<div class="Spell"><h3 class="SpellName">睡眠術 (Sleep)<span class="Tags">	Level 3	, 惑控系</span></h3>
 <p class="NoIndent">1d4 enemies you can see of the GM’s choice fall asleep. Only creatures capable of sleeping are affected. They awake as normal: loud noises, jolts, pain.</p></div>
 <hr/>
 <div><h1>等級5 法術</h1></div>
@@ -154,7 +154,7 @@
 <p class="NoIndent">The target is held in a cage of magical force. Nothing can get in or out of the cage. The cage remains until you cast another spell or dismiss it. While the spell is ongoing, the caged creature can hear your thoughts and you cannot leave sight of the cage.</p></div>
 <div class="Spell"><h3 class="SpellName">異界探知 (Contact Other Plane)<span class="Tags">	Level 5	, 預言系</span></h3>
 <p class="NoIndent">You send a request to another plane. Specify who or what you’d like to contact by location, type of creature, name, or title. You open a two-way communication with that creature. Your communication can be cut off at any time by you or the creature you contacted.</p></div>
-<div class="Spell"><h3 class="SpellName">變形術 (Polymorph)<span class="Tags">	Level 5	, 附魔系</span></h3>
+<div class="Spell"><h3 class="SpellName">變形術 (Polymorph)<span class="Tags">	Level 5	, 惑控系</span></h3>
 <p class="NoIndent">Your touch reshapes a creature entirely, they stay in the form you craft until you cast a spell. Describe the new shape you craft, including any stat changes, significant adaptations, or major weaknesses. The GM will then tell you one or more of these:</p>
 <ul><li>The form will be unstable and temporary</li>
 <li>The creature’s mind will be altered as well</li>
@@ -169,7 +169,7 @@
 <p class="NoIndent">The GM will tell you the type of monster you get based on the traits you select. The creature remains on this plane until it dies or you dismiss it. While the spell is ongoing you take -1 to cast a spell.</p></div>
 <hr/>
 <div><h1>等級7 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">支配術 (Dominate)<span class="Tags">	Level 7	, 附魔系, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">支配術 (Dominate)<span class="Tags">	Level 7	, 惑控系, Ongoing</span></h3>
 <p class="NoIndent">Your touch pushes your mind into someone else’s. You gain 1d4 hold. Spend one hold to make the target take one of these actions:</p>
 <ul><li>Speak a few words of your choice</li>
 <li>Give you something they hold</li>
@@ -186,7 +186,7 @@
 <p class="NoIndent">A cloud of fog drifts into this realm from beyond the Black Gates of Death, filling the immediate area. Whenever a creature in the area takes damage it takes an additional, separate 1d6 damage which ignores armor. This spell persists so long as you can see the affected area, or until you dismiss it.</p></div>
 <hr/>
 <div><h1>等級9 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">嫌惡術 (Antipathy)<span class="Tags">	Level 9, 附魔系, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">嫌惡術 (Antipathy)<span class="Tags">	Level 9, 惑控系, Ongoing</span></h3>
 <p class="NoIndent">Choose a target and describe a type of creature or an alignment. Creatures of the specified type or alignment cannot come within sight of the target. If a creature of the specified type does find itself within sight of the target, it immediately flees. This effect continues until you leave the target’s presence or you dismiss the spell. While the spell is ongoing you take -1 to cast a spell.</p></div>
 <div class="Spell"><h3 class="SpellName">預警術 (Alert)<span class="Tags">	Level 9, 預言系</span></h3>
 <p class="NoIndent">Describe an event. The GM will tell you when that event occurs, no matter where you are or how far away the event is. If you choose, you can view the location of the event as though you were there in person. You can only have one Alert active at a time.</p></div>
@@ -244,7 +244,7 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(" "+tags_arr.map(function(tag){
+        current.html(""+tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
             if(isRangeTag(tag))         className = "red";
@@ -253,6 +253,18 @@
             if(isSpellLevelTag(tag))    className = "purple";
             return `<tag class="${className}">${tag}</tag>`;
           }).join(" "));
+      });
+      $("#names p").each(function(i) {
+        var names_match = $(this).html().match(/(.+\: )(.+)/);
+        if( names_match == null || names_match.length<3 ) return ;
+        
+        var names_head = names_match[1];
+        var names_arr = names_match[2].split(", ").map(context => {
+          const name_match = context.match(/(.+)\((\w+)\)/);
+          return name_match? `<n title="${name_match[2]}">${name_match[1]}</n>`: context;
+        });
+
+        $(this).html(names_head + names_arr.join(", "));
       });
 
       function isSpellLevelTag(tag){
